--- a/Canvas/Base.lproj/Main.storyboard
+++ b/Canvas/Base.lproj/Main.storyboard
@@ -19,39 +19,63 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eWQ-lO-jaA">
-                                <rect key="frame" x="0.0" y="441" width="375" height="226"/>
+                                <rect key="frame" x="0.0" y="460" width="375" height="207"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="excited" translatesAutoresizingMaskIntoConstraints="NO" id="YXc-b6-6h2">
                                         <rect key="frame" x="157" y="119" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="ASg-AP-acI" appends="YES" id="An8-VK-e0P"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="happy" translatesAutoresizingMaskIntoConstraints="NO" id="Hd2-r7-0oI">
                                         <rect key="frame" x="157" y="41" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="gX3-nE-yOl" appends="YES" id="2Ov-BU-GmC"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="sad" translatesAutoresizingMaskIntoConstraints="NO" id="t5q-M7-tEH">
                                         <rect key="frame" x="252" y="41" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="4HJ-nN-TZs" appends="YES" id="5mz-pV-Vlo"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="wink" translatesAutoresizingMaskIntoConstraints="NO" id="Ren-sD-nYd">
                                         <rect key="frame" x="252" y="119" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="1uc-Cn-Fsk" appends="YES" id="qex-ex-XNq"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="dead" translatesAutoresizingMaskIntoConstraints="NO" id="71s-SP-yAb">
                                         <rect key="frame" x="58" y="41" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="TDb-4h-gan" appends="YES" id="7on-5d-u6M"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="tongue" translatesAutoresizingMaskIntoConstraints="NO" id="iCi-Oc-IgU">
                                         <rect key="frame" x="58" y="119" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="iuS-dH-ikI" appends="YES" id="Ejg-NZ-ft0"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="down_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="1T4-5F-LHk">
                                         <rect key="frame" x="177" y="9" width="20" height="14"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.9081322862911918" green="0.9081322862911918" blue="0.9081322862911918" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="ZvF-73-sxE" appends="YES" id="flR-l0-Kr3"/>
@@ -69,6 +93,36 @@
                 <panGestureRecognizer minimumNumberOfTouches="1" id="ZvF-73-sxE">
                     <connections>
                         <action selector="didPanTray:" destination="BYZ-38-t0r" id="bph-0F-hfU"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="TDb-4h-gan">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="WK1-I8-v43"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="gX3-nE-yOl">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="4Wu-3O-uRZ"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="4HJ-nN-TZs">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="6tq-ad-XXw"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="iuS-dH-ikI">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="fdP-Cs-L9E"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="ASg-AP-acI">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="jud-Qh-qzc"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="1uc-Cn-Fsk">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="cRB-WF-0tQ"/>
                     </connections>
                 </panGestureRecognizer>
             </objects>
